[tool.poetry]
name = "concurrency"
version = "0.1.0"
description = "Python Concurrency Talk"
authors = ["gkedge <gregwork@kedges.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
nest-asyncio = "^1.5.1"
nbconvert = "^6.0.7"
pyppeteer = "^0.2.5"
rise = "^5.7.1"
notebook = "^6.3.0"
jupyter = "^1.0.0"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
